adding checkbox to table headers

--- a/examples/demos/list.html
+++ b/examples/demos/list.html
@@ -112,18 +112,22 @@
                 <table class="rs-list-table">
                   <thead>
                     <tr>
-                      <th class="rs-table-status"></th>
-                      <th>Two</th>
-                      <th>Three</th>
-                      <th>Four</th>
-                      <th>Five</th>
-                      <th>Six</th>
-                      <th>Seven</th>
+                      <th class="rs-table-status">&emsp;</th>
+                      <th class="rs-table-input"><input type="checkbox"></th>
+                      <th class="rs-table-cog"></th>
+                      <th>Header</th>
+                      <th>Header</th>
+                      <th>Header</th>
+                      <th>Header</th>
+                      <th>Header</th>
+                      <th>Header</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
                       <td class="rs-table-status rs-table-status-ok"></td>
+                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td><a class="rs-btn" href="#">Button</a></td>
@@ -133,6 +137,8 @@
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-warning"></td>
+                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td>Body</td>
@@ -142,6 +148,8 @@
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-error"></td>
+                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td><a class="rs-btn" href="#">Button</a></td>
@@ -151,6 +159,8 @@
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-ok"></td>
+                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td>Body</td>
@@ -160,6 +170,8 @@
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-warning"></td>
+                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td><a class="rs-btn" href="#">Button</a></td>
@@ -169,6 +181,8 @@
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-error"></td>
+                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td>Body</td>
@@ -178,6 +192,8 @@
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-ok"></td>
+                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td><a class="rs-btn" href="#">Button</a></td>
@@ -187,6 +203,8 @@
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-warning"></td>
+                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td>Body</td>
@@ -196,6 +214,8 @@
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-error"></td>
+                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td><a class="rs-btn" href="#">Button</a></td>
