--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -14,7 +14,7 @@
       <thead>
         <tr>
           <th class="rs-table-status">&emsp;</th>
-          <th class="rs-table-input"></th>
+          <th class="rs-table-input"><input type="checkbox"></th>
           <th class="rs-table-cog"></th>
           <th>Header</th>
           <th>Header</th>
