use css content to prevent column collapse
using n space + display block to force a width

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -13,7 +13,7 @@
     <table class="rs-list-table">
       <thead>
         <tr>
-          <th class="rs-table-status">&emsp;</th>
+          <th class="rs-table-status"></th>
           <th class="rs-table-input"><input type="checkbox"></th>
           <th class="rs-table-cog"></th>
           <th>Header</th>
