--- a/examples/demos/list.html
+++ b/examples/demos/list.html
@@ -113,7 +113,7 @@
                   <thead>
                     <tr>
                       <th class="rs-table-status"></th>
-                      <th class="rs-table-input"><input type="checkbox"></th>
+                      <th class="rs-table-checkbox"><input type="checkbox"></th>
                       <th class="rs-table-cog"></th>
                       <th>Header</th>
                       <th>Header</th>
@@ -126,101 +126,101 @@
                   <tbody>
                     <tr>
                       <td class="rs-table-status rs-table-status-ok"></td>
-                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
-                      <td><a class="rs-btn" href="#">Button</a></td>
+                      <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
                       <td>Body</td>
-                      <td>Body</td>
+                      <td class="rs-table-input"><input type="text"></td>
                       <td>Body</td>
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-warning"></td>
-                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td>Body</td>
                       <td>Body</td>
-                      <td>Body</td>
+                      <td class="rs-table-input"><input type="text"></td>
                       <td>Body</td>
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-error"></td>
-                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
-                      <td><a class="rs-btn" href="#">Button</a></td>
+                      <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
                       <td>Body</td>
-                      <td>Body</td>
+                      <td class="rs-table-input"><input type="text"></td>
                       <td>Body</td>
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-ok"></td>
-                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td>Body</td>
                       <td>Body</td>
-                      <td>Body</td>
+                      <td class="rs-table-input"><input type="text"></td>
                       <td>Body</td>
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-warning"></td>
-                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
-                      <td><a class="rs-btn" href="#">Button</a></td>
+                      <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
                       <td>Body</td>
-                      <td>Body</td>
+                      <td class="rs-table-input"><input type="text"></td>
                       <td>Body</td>
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-error"></td>
-                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td>Body</td>
                       <td>Body</td>
-                      <td>Body</td>
+                      <td class="rs-table-input"><input type="text"></td>
                       <td>Body</td>
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-ok"></td>
-                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
-                      <td><a class="rs-btn" href="#">Button</a></td>
+                      <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
                       <td>Body</td>
-                      <td>Body</td>
+                      <td class="rs-table-input"><input type="text"></td>
                       <td>Body</td>
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-warning"></td>
-                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
                       <td>Body</td>
                       <td>Body</td>
-                      <td>Body</td>
+                      <td class="rs-table-input"><input type="text"></td>
                       <td>Body</td>
                     </tr>
                     <tr>
                       <td class="rs-table-status rs-table-status-error"></td>
-                      <td class="rs-table-input"><input type="checkbox"></td>
+                      <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
                       <td><a href="#">Body</a></td>
                       <td>Body</td>
-                      <td><a class="rs-btn" href="#">Button</a></td>
+                      <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
                       <td>Body</td>
-                      <td>Body</td>
+                      <td class="rs-table-input"><input type="text"></td>
                       <td>Body</td>
                     </tr>
                   </tbody>
