adding rs-table-radio

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -11,121 +11,131 @@
 <body class="rs-responsive" style="background: #fff; padding: 40px;">
   <div class="rs-list-table-wrapper">
     <table class="rs-list-table">
-                  <thead>
-                    <tr>
-                      <th class="rs-table-status"></th>
-                      <th class="rs-table-checkbox"><input type="checkbox"></th>
-                      <th class="rs-table-cog"></th>
-                      <th>Header</th>
-                      <th>Header</th>
-                      <th>Header</th>
-                      <th>Header</th>
-                      <th>Header</th>
-                      <th>Header</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td class="rs-table-status rs-table-status-ok"></td>
-                      <td class="rs-table-checkbox"><input type="checkbox"></td>
-                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
-                      <td><a href="#">Body</a></td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><input type="text"></td>
-                      <td>Body</td>
-                    </tr>
-                    <tr>
-                      <td class="rs-table-status rs-table-status-warning"></td>
-                      <td class="rs-table-checkbox"><input type="checkbox"></td>
-                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
-                      <td><a href="#">Body</a></td>
-                      <td>Body</td>
-                      <td>Body</td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><input type="text"></td>
-                      <td>Body</td>
-                    </tr>
-                    <tr>
-                      <td class="rs-table-status rs-table-status-error"></td>
-                      <td class="rs-table-checkbox"><input type="checkbox"></td>
-                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
-                      <td><a href="#">Body</a></td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><input type="text"></td>
-                      <td>Body</td>
-                    </tr>
-                    <tr>
-                      <td class="rs-table-status rs-table-status-ok"></td>
-                      <td class="rs-table-checkbox"><input type="checkbox"></td>
-                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
-                      <td><a href="#">Body</a></td>
-                      <td>Body</td>
-                      <td>Body</td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><input type="text"></td>
-                      <td>Body</td>
-                    </tr>
-                    <tr>
-                      <td class="rs-table-status rs-table-status-warning"></td>
-                      <td class="rs-table-checkbox"><input type="checkbox"></td>
-                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
-                      <td><a href="#">Body</a></td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><input type="text"></td>
-                      <td>Body</td>
-                    </tr>
-                    <tr>
-                      <td class="rs-table-status rs-table-status-error"></td>
-                      <td class="rs-table-checkbox"><input type="checkbox"></td>
-                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
-                      <td><a href="#">Body</a></td>
-                      <td>Body</td>
-                      <td>Body</td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><input type="text"></td>
-                      <td>Body</td>
-                    </tr>
-                    <tr>
-                      <td class="rs-table-status rs-table-status-ok"></td>
-                      <td class="rs-table-checkbox"><input type="checkbox"></td>
-                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
-                      <td><a href="#">Body</a></td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><input type="text"></td>
-                      <td>Body</td>
-                    </tr>
-                    <tr>
-                      <td class="rs-table-status rs-table-status-warning"></td>
-                      <td class="rs-table-checkbox"><input type="checkbox"></td>
-                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
-                      <td><a href="#">Body</a></td>
-                      <td>Body</td>
-                      <td>Body</td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><input type="text"></td>
-                      <td>Body</td>
-                    </tr>
-                    <tr>
-                      <td class="rs-table-status rs-table-status-error"></td>
-                      <td class="rs-table-checkbox"><input type="checkbox"></td>
-                      <td class="rs-table-cog"><button class="rs-cog"></button></td>
-                      <td><a href="#">Body</a></td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-                      <td>Body</td>
-                      <td class="rs-table-input"><input type="text"></td>
-                      <td>Body</td>
-                    </tr>
-                  </tbody>
-                </table>
+      <thead>
+        <tr>
+          <th class="rs-table-status"></th>
+          <th class="rs-table-checkbox"><input type="checkbox"></th>
+          <th class="rs-table-cog"></th>
+          <th class="rs-table-radio"></th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="rs-table-status rs-table-status-ok"></td>
+          <td class="rs-table-checkbox"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
+          <td class="rs-table-radio"><input type="radio" name="selection"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+          <td>Body</td>
+          <td class="rs-table-input"><input type="text"></td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-warning"></td>
+          <td class="rs-table-checkbox"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
+          <td class="rs-table-radio"><input type="radio" name="selection"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td class="rs-table-input"><input type="text"></td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-error"></td>
+          <td class="rs-table-checkbox"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
+          <td class="rs-table-radio"><input type="radio" name="selection"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+          <td>Body</td>
+          <td class="rs-table-input"><input type="text"></td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-ok"></td>
+          <td class="rs-table-checkbox"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
+          <td class="rs-table-radio"><input type="radio" name="selection"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td class="rs-table-input"><input type="text"></td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-warning"></td>
+          <td class="rs-table-checkbox"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
+          <td class="rs-table-radio"><input type="radio" name="selection"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+          <td>Body</td>
+          <td class="rs-table-input"><input type="text"></td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-error"></td>
+          <td class="rs-table-checkbox"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
+          <td class="rs-table-radio"><input type="radio" name="selection"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td class="rs-table-input"><input type="text"></td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-ok"></td>
+          <td class="rs-table-checkbox"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
+          <td class="rs-table-radio"><input type="radio" name="selection"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+          <td>Body</td>
+          <td class="rs-table-input"><input type="text"></td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-warning"></td>
+          <td class="rs-table-checkbox"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
+          <td class="rs-table-radio"><input type="radio" name="selection"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td class="rs-table-input"><input type="text"></td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-error"></td>
+          <td class="rs-table-checkbox"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
+          <td class="rs-table-radio"><input type="radio" name="selection"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+          <td>Body</td>
+          <td class="rs-table-input"><input type="text"></td>
+          <td>Body</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </body>
 </html>
