adding select box cell, rs-table-select

--- a/examples/demos/list.html
+++ b/examples/demos/list.html
@@ -115,8 +115,9 @@
                       <th class="rs-table-status"></th>
                       <th class="rs-table-checkbox"><input type="checkbox"></th>
                       <th class="rs-table-cog"></th>
+                      <th class="rs-table-radio"></th>
                       <th>Header</th>
-                      <th>Header</th>
+                      <th class="rs-table-select">Header</th>
                       <th>Header</th>
                       <th>Header</th>
                       <th>Header</th>
@@ -128,8 +129,15 @@
                       <td class="rs-table-status rs-table-status-ok"></td>
                       <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
+                      <td class="rs-table-radio"><input type="radio" name="selection"></td>
                       <td><a href="#">Body</a></td>
-                      <td>Body</td>
+                      <td class="rs-table-select">
+                        <select>
+                          <option>One</option>
+                          <option>Two</option>
+                          <option>Three</option>
+                        </select>
+                      </td>
                       <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
                       <td>Body</td>
                       <td class="rs-table-input"><input type="text"></td>
@@ -139,8 +147,15 @@
                       <td class="rs-table-status rs-table-status-warning"></td>
                       <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
+                      <td class="rs-table-radio"><input type="radio" name="selection"></td>
                       <td><a href="#">Body</a></td>
-                      <td>Body</td>
+                      <td class="rs-table-select">
+                        <select>
+                          <option>One</option>
+                          <option>Two</option>
+                          <option>Three</option>
+                        </select>
+                      </td>
                       <td>Body</td>
                       <td>Body</td>
                       <td class="rs-table-input"><input type="text"></td>
@@ -150,8 +165,15 @@
                       <td class="rs-table-status rs-table-status-error"></td>
                       <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
+                      <td class="rs-table-radio"><input type="radio" name="selection"></td>
                       <td><a href="#">Body</a></td>
-                      <td>Body</td>
+                      <td class="rs-table-select">
+                        <select>
+                          <option>One</option>
+                          <option>Two</option>
+                          <option>Three</option>
+                        </select>
+                      </td>
                       <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
                       <td>Body</td>
                       <td class="rs-table-input"><input type="text"></td>
@@ -161,8 +183,15 @@
                       <td class="rs-table-status rs-table-status-ok"></td>
                       <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
+                      <td class="rs-table-radio"><input type="radio" name="selection"></td>
                       <td><a href="#">Body</a></td>
-                      <td>Body</td>
+                      <td class="rs-table-select">
+                        <select>
+                          <option>One</option>
+                          <option>Two</option>
+                          <option>Three</option>
+                        </select>
+                      </td>
                       <td>Body</td>
                       <td>Body</td>
                       <td class="rs-table-input"><input type="text"></td>
@@ -172,8 +201,15 @@
                       <td class="rs-table-status rs-table-status-warning"></td>
                       <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
+                      <td class="rs-table-radio"><input type="radio" name="selection"></td>
                       <td><a href="#">Body</a></td>
-                      <td>Body</td>
+                      <td class="rs-table-select">
+                        <select>
+                          <option>One</option>
+                          <option>Two</option>
+                          <option>Three</option>
+                        </select>
+                      </td>
                       <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
                       <td>Body</td>
                       <td class="rs-table-input"><input type="text"></td>
@@ -183,8 +219,15 @@
                       <td class="rs-table-status rs-table-status-error"></td>
                       <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
+                      <td class="rs-table-radio"><input type="radio" name="selection"></td>
                       <td><a href="#">Body</a></td>
-                      <td>Body</td>
+                      <td class="rs-table-select">
+                        <select>
+                          <option>One</option>
+                          <option>Two</option>
+                          <option>Three</option>
+                        </select>
+                      </td>
                       <td>Body</td>
                       <td>Body</td>
                       <td class="rs-table-input"><input type="text"></td>
@@ -194,8 +237,15 @@
                       <td class="rs-table-status rs-table-status-ok"></td>
                       <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
+                      <td class="rs-table-radio"><input type="radio" name="selection"></td>
                       <td><a href="#">Body</a></td>
-                      <td>Body</td>
+                      <td class="rs-table-select">
+                        <select>
+                          <option>One</option>
+                          <option>Two</option>
+                          <option>Three</option>
+                        </select>
+                      </td>
                       <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
                       <td>Body</td>
                       <td class="rs-table-input"><input type="text"></td>
@@ -205,8 +255,15 @@
                       <td class="rs-table-status rs-table-status-warning"></td>
                       <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
+                      <td class="rs-table-radio"><input type="radio" name="selection"></td>
                       <td><a href="#">Body</a></td>
-                      <td>Body</td>
+                      <td class="rs-table-select">
+                        <select>
+                          <option>One</option>
+                          <option>Two</option>
+                          <option>Three</option>
+                        </select>
+                      </td>
                       <td>Body</td>
                       <td>Body</td>
                       <td class="rs-table-input"><input type="text"></td>
@@ -216,8 +273,15 @@
                       <td class="rs-table-status rs-table-status-error"></td>
                       <td class="rs-table-checkbox"><input type="checkbox"></td>
                       <td class="rs-table-cog"><button class="rs-cog"></button></td>
+                      <td class="rs-table-radio"><input type="radio" name="selection"></td>
                       <td><a href="#">Body</a></td>
-                      <td>Body</td>
+                      <td class="rs-table-select">
+                        <select>
+                          <option>One</option>
+                          <option>Two</option>
+                          <option>Three</option>
+                        </select>
+                      </td>
                       <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
                       <td>Body</td>
                       <td class="rs-table-input"><input type="text"></td>
