--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -18,7 +18,7 @@
           <th class="rs-table-cog"></th>
           <th class="rs-table-radio"></th>
           <th>Header</th>
-          <th>Header</th>
+          <th class="rs-table-select">Header</th>
           <th>Header</th>
           <th>Header</th>
           <th>Header</th>
@@ -32,7 +32,13 @@
           <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td class="rs-table-radio"><input type="radio" name="selection"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td class="rs-table-select">
+            <select>
+              <option>One</option>
+              <option>Two</option>
+              <option>Three</option>
+            </select>
+          </td>
           <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
           <td>Body</td>
           <td class="rs-table-input"><input type="text"></td>
@@ -44,7 +50,13 @@
           <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td class="rs-table-radio"><input type="radio" name="selection"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td class="rs-table-select">
+            <select>
+              <option>One</option>
+              <option>Two</option>
+              <option>Three</option>
+            </select>
+          </td>
           <td>Body</td>
           <td>Body</td>
           <td class="rs-table-input"><input type="text"></td>
@@ -56,7 +68,13 @@
           <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td class="rs-table-radio"><input type="radio" name="selection"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td class="rs-table-select">
+            <select>
+              <option>One</option>
+              <option>Two</option>
+              <option>Three</option>
+            </select>
+          </td>
           <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
           <td>Body</td>
           <td class="rs-table-input"><input type="text"></td>
@@ -68,7 +86,13 @@
           <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td class="rs-table-radio"><input type="radio" name="selection"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td class="rs-table-select">
+            <select>
+              <option>One</option>
+              <option>Two</option>
+              <option>Three</option>
+            </select>
+          </td>
           <td>Body</td>
           <td>Body</td>
           <td class="rs-table-input"><input type="text"></td>
@@ -80,7 +104,13 @@
           <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td class="rs-table-radio"><input type="radio" name="selection"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td class="rs-table-select">
+            <select>
+              <option>One</option>
+              <option>Two</option>
+              <option>Three</option>
+            </select>
+          </td>
           <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
           <td>Body</td>
           <td class="rs-table-input"><input type="text"></td>
@@ -92,7 +122,13 @@
           <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td class="rs-table-radio"><input type="radio" name="selection"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td class="rs-table-select">
+            <select>
+              <option>One</option>
+              <option>Two</option>
+              <option>Three</option>
+            </select>
+          </td>
           <td>Body</td>
           <td>Body</td>
           <td class="rs-table-input"><input type="text"></td>
@@ -104,7 +140,13 @@
           <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td class="rs-table-radio"><input type="radio" name="selection"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td class="rs-table-select">
+            <select>
+              <option>One</option>
+              <option>Two</option>
+              <option>Three</option>
+            </select>
+          </td>
           <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
           <td>Body</td>
           <td class="rs-table-input"><input type="text"></td>
@@ -116,7 +158,13 @@
           <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td class="rs-table-radio"><input type="radio" name="selection"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td class="rs-table-select">
+            <select>
+              <option>One</option>
+              <option>Two</option>
+              <option>Three</option>
+            </select>
+          </td>
           <td>Body</td>
           <td>Body</td>
           <td class="rs-table-input"><input type="text"></td>
@@ -128,7 +176,13 @@
           <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td class="rs-table-radio"><input type="radio" name="selection"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td class="rs-table-select">
+            <select>
+              <option>One</option>
+              <option>Two</option>
+              <option>Three</option>
+            </select>
+          </td>
           <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
           <td>Body</td>
           <td class="rs-table-input"><input type="text"></td>
