--- a/examples/demos/list.html
+++ b/examples/demos/list.html
@@ -116,12 +116,42 @@
                       <th class="rs-table-checkbox"><input type="checkbox"></th>
                       <th class="rs-table-cog"></th>
                       <th class="rs-table-radio"></th>
-                      <th>Header</th>
-                      <th class="rs-table-select">Header</th>
-                      <th>Header</th>
-                      <th>Header</th>
-                      <th>Header</th>
-                      <th>Header</th>
+                      <th>
+                        <a href="#" class="rs-table-sort">
+                          <span class="rs-table-sort-text">Header</span>
+                          <span class="rs-table-sort-indicator"></span>
+                        </a>
+                      </th>
+                      <th class="rs-table-select">
+                        <a href="#" class="rs-table-sort hover">
+                          <span class="rs-table-sort-text">Header</span>
+                          <span class="rs-table-sort-indicator"></span>
+                        </a>
+                      </th>
+                      <th>
+                        <a href="#" class="rs-table-sort rs-table-sort-asc">
+                          <span class="rs-table-sort-text">Header</span>
+                          <span class="rs-table-sort-indicator"></span>
+                        </a>
+                      </th>
+                      <th>
+                        <a href="#" class="rs-table-sort rs-table-sort-asc hover">
+                          <span class="rs-table-sort-text">Header</span>
+                          <span class="rs-table-sort-indicator"></span>
+                        </a>
+                      </th>
+                      <th>
+                        <a href="#" class="rs-table-sort rs-table-sort-desc">
+                          <span class="rs-table-sort-text">Header</span>
+                          <span class="rs-table-sort-indicator"></span>
+                        </a>
+                      </th>
+                      <th>
+                        <a href="#" class="rs-table-sort rs-table-sort-desc hover">
+                          <span class="rs-table-sort-text">Header</span>
+                          <span class="rs-table-sort-indicator"></span>
+                        </a>
+                      </th>
                     </tr>
                   </thead>
                   <tbody>
