--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -17,12 +17,42 @@
           <th class="rs-table-checkbox"><input type="checkbox"></th>
           <th class="rs-table-cog"></th>
           <th class="rs-table-radio"></th>
-          <th>Header</th>
-          <th class="rs-table-select">Header</th>
-          <th>Header</th>
-          <th>Header</th>
-          <th>Header</th>
-          <th>Header</th>
+          <th>
+            <a href="#" class="rs-table-sort">
+              <span class="rs-table-sort-text">Header (Normal)</span>
+              <span class="rs-table-sort-indicator"></span>
+            </a>
+          </th>
+          <th class="rs-table-select">
+            <a href="#" class="rs-table-sort hover">
+              <span class="rs-table-sort-text">Header (Hover)</span>
+              <span class="rs-table-sort-indicator"></span>
+            </a>
+          </th>
+          <th>
+            <a href="#" class="rs-table-sort rs-table-sort-asc">
+              <span class="rs-table-sort-text">Header (Ascending)</span>
+              <span class="rs-table-sort-indicator"></span>
+            </a>
+          </th>
+          <th>
+            <a href="#" class="rs-table-sort rs-table-sort-asc hover">
+              <span class="rs-table-sort-text">Header (Ascending Hover)</span>
+              <span class="rs-table-sort-indicator"></span>
+            </a>
+          </th>
+          <th>
+            <a href="#" class="rs-table-sort rs-table-sort-desc">
+              <span class="rs-table-sort-text">Header (Descending)</span>
+              <span class="rs-table-sort-indicator"></span>
+            </a>
+          </th>
+          <th>
+            <a href="#" class="rs-table-sort rs-table-sort-desc hover">
+              <span class="rs-table-sort-text">Header (Descending Hover)</span>
+              <span class="rs-table-sort-indicator"></span>
+            </a>
+          </th>
         </tr>
       </thead>
       <tbody>
