--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -8,218 +8,220 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="rs-responsive" style="background: #fff; padding: 40px;">
-  <div class="rs-list-table-wrapper">
-    <table class="rs-list-table">
-      <thead>
-        <tr>
-          <th class="rs-table-status"></th>
-          <th class="rs-table-checkbox"><input type="checkbox"></th>
-          <th class="rs-table-cog"></th>
-          <th class="rs-table-radio"></th>
-          <th>
-            <a href="#" class="rs-table-sort">
-              <span class="rs-table-sort-text">Header (Normal)</span>
-              <span class="rs-table-sort-indicator"></span>
-            </a>
-          </th>
-          <th class="rs-table-select">
-            <a href="#" class="rs-table-sort hover">
-              <span class="rs-table-sort-text">Header (Hover)</span>
-              <span class="rs-table-sort-indicator"></span>
-            </a>
-          </th>
-          <th>
-            <a href="#" class="rs-table-sort rs-table-sort-asc">
-              <span class="rs-table-sort-text">Header (Ascending)</span>
-              <span class="rs-table-sort-indicator"></span>
-            </a>
-          </th>
-          <th>
-            <a href="#" class="rs-table-sort rs-table-sort-asc hover">
-              <span class="rs-table-sort-text">Header (Ascending Hover)</span>
-              <span class="rs-table-sort-indicator"></span>
-            </a>
-          </th>
-          <th>
-            <a href="#" class="rs-table-sort rs-table-sort-desc">
-              <span class="rs-table-sort-text">Header (Descending)</span>
-              <span class="rs-table-sort-indicator"></span>
-            </a>
-          </th>
-          <th>
-            <a href="#" class="rs-table-sort rs-table-sort-desc hover">
-              <span class="rs-table-sort-text">Header (Descending Hover)</span>
-              <span class="rs-table-sort-indicator"></span>
-            </a>
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="rs-table-status rs-table-status-ok"></td>
-          <td class="rs-table-checkbox"><input type="checkbox"></td>
-          <td class="rs-table-cog"><button class="rs-cog"></button></td>
-          <td class="rs-table-radio"><input type="radio" name="selection"></td>
-          <td><a href="#">Body</a></td>
-          <td class="rs-table-select">
-            <select>
-              <option>One</option>
-              <option>Two</option>
-              <option>Three</option>
-            </select>
-          </td>
-          <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-          <td>Body</td>
-          <td class="rs-table-input"><input type="text"></td>
-          <td>Body</td>
-        </tr>
-        <tr>
-          <td class="rs-table-status rs-table-status-warning"></td>
-          <td class="rs-table-checkbox"><input type="checkbox"></td>
-          <td class="rs-table-cog"><button class="rs-cog"></button></td>
-          <td class="rs-table-radio"><input type="radio" name="selection"></td>
-          <td><a href="#">Body</a></td>
-          <td class="rs-table-select">
-            <select>
-              <option>One</option>
-              <option>Two</option>
-              <option>Three</option>
-            </select>
-          </td>
-          <td>Body</td>
-          <td>Body</td>
-          <td class="rs-table-input"><input type="text"></td>
-          <td>Body</td>
-        </tr>
-        <tr>
-          <td class="rs-table-status rs-table-status-error"></td>
-          <td class="rs-table-checkbox"><input type="checkbox"></td>
-          <td class="rs-table-cog"><button class="rs-cog"></button></td>
-          <td class="rs-table-radio"><input type="radio" name="selection"></td>
-          <td><a href="#">Body</a></td>
-          <td class="rs-table-select">
-            <select>
-              <option>One</option>
-              <option>Two</option>
-              <option>Three</option>
-            </select>
-          </td>
-          <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-          <td>Body</td>
-          <td class="rs-table-input"><input type="text"></td>
-          <td>Body</td>
-        </tr>
-        <tr>
-          <td class="rs-table-status rs-table-status-ok"></td>
-          <td class="rs-table-checkbox"><input type="checkbox"></td>
-          <td class="rs-table-cog"><button class="rs-cog"></button></td>
-          <td class="rs-table-radio"><input type="radio" name="selection"></td>
-          <td><a href="#">Body</a></td>
-          <td class="rs-table-select">
-            <select>
-              <option>One</option>
-              <option>Two</option>
-              <option>Three</option>
-            </select>
-          </td>
-          <td>Body</td>
-          <td>Body</td>
-          <td class="rs-table-input"><input type="text"></td>
-          <td>Body</td>
-        </tr>
-        <tr>
-          <td class="rs-table-status rs-table-status-warning"></td>
-          <td class="rs-table-checkbox"><input type="checkbox"></td>
-          <td class="rs-table-cog"><button class="rs-cog"></button></td>
-          <td class="rs-table-radio"><input type="radio" name="selection"></td>
-          <td><a href="#">Body</a></td>
-          <td class="rs-table-select">
-            <select>
-              <option>One</option>
-              <option>Two</option>
-              <option>Three</option>
-            </select>
-          </td>
-          <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-          <td>Body</td>
-          <td class="rs-table-input"><input type="text"></td>
-          <td>Body</td>
-        </tr>
-        <tr>
-          <td class="rs-table-status rs-table-status-error"></td>
-          <td class="rs-table-checkbox"><input type="checkbox"></td>
-          <td class="rs-table-cog"><button class="rs-cog"></button></td>
-          <td class="rs-table-radio"><input type="radio" name="selection"></td>
-          <td><a href="#">Body</a></td>
-          <td class="rs-table-select">
-            <select>
-              <option>One</option>
-              <option>Two</option>
-              <option>Three</option>
-            </select>
-          </td>
-          <td>Body</td>
-          <td>Body</td>
-          <td class="rs-table-input"><input type="text"></td>
-          <td>Body</td>
-        </tr>
-        <tr>
-          <td class="rs-table-status rs-table-status-ok"></td>
-          <td class="rs-table-checkbox"><input type="checkbox"></td>
-          <td class="rs-table-cog"><button class="rs-cog"></button></td>
-          <td class="rs-table-radio"><input type="radio" name="selection"></td>
-          <td><a href="#">Body</a></td>
-          <td class="rs-table-select">
-            <select>
-              <option>One</option>
-              <option>Two</option>
-              <option>Three</option>
-            </select>
-          </td>
-          <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-          <td>Body</td>
-          <td class="rs-table-input"><input type="text"></td>
-          <td>Body</td>
-        </tr>
-        <tr>
-          <td class="rs-table-status rs-table-status-warning"></td>
-          <td class="rs-table-checkbox"><input type="checkbox"></td>
-          <td class="rs-table-cog"><button class="rs-cog"></button></td>
-          <td class="rs-table-radio"><input type="radio" name="selection"></td>
-          <td><a href="#">Body</a></td>
-          <td class="rs-table-select">
-            <select>
-              <option>One</option>
-              <option>Two</option>
-              <option>Three</option>
-            </select>
-          </td>
-          <td>Body</td>
-          <td>Body</td>
-          <td class="rs-table-input"><input type="text"></td>
-          <td>Body</td>
-        </tr>
-        <tr>
-          <td class="rs-table-status rs-table-status-error"></td>
-          <td class="rs-table-checkbox"><input type="checkbox"></td>
-          <td class="rs-table-cog"><button class="rs-cog"></button></td>
-          <td class="rs-table-radio"><input type="radio" name="selection"></td>
-          <td><a href="#">Body</a></td>
-          <td class="rs-table-select">
-            <select>
-              <option>One</option>
-              <option>Two</option>
-              <option>Three</option>
-            </select>
-          </td>
-          <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-          <td>Body</td>
-          <td class="rs-table-input"><input type="text"></td>
-          <td>Body</td>
-        </tr>
-      </tbody>
-    </table>
+<body class="rs-responsive" style="background: #fff;">
+  <div style="padding: 40px;">
+    <div class="rs-list-table-wrapper">
+      <table class="rs-list-table">
+        <thead>
+          <tr>
+            <th class="rs-table-status"></th>
+            <th class="rs-table-checkbox"><input type="checkbox"></th>
+            <th class="rs-table-cog"></th>
+            <th class="rs-table-radio"></th>
+            <th>
+              <a href="#" class="rs-table-sort">
+                <span class="rs-table-sort-text">Header (Normal)</span>
+                <span class="rs-table-sort-indicator"></span>
+              </a>
+            </th>
+            <th class="rs-table-select">
+              <a href="#" class="rs-table-sort hover">
+                <span class="rs-table-sort-text">Header (Hover)</span>
+                <span class="rs-table-sort-indicator"></span>
+              </a>
+            </th>
+            <th>
+              <a href="#" class="rs-table-sort rs-table-sort-asc">
+                <span class="rs-table-sort-text">Header (Ascending)</span>
+                <span class="rs-table-sort-indicator"></span>
+              </a>
+            </th>
+            <th>
+              <a href="#" class="rs-table-sort rs-table-sort-asc hover">
+                <span class="rs-table-sort-text">Header (Ascending Hover)</span>
+                <span class="rs-table-sort-indicator"></span>
+              </a>
+            </th>
+            <th>
+              <a href="#" class="rs-table-sort rs-table-sort-desc">
+                <span class="rs-table-sort-text">Header (Descending)</span>
+                <span class="rs-table-sort-indicator"></span>
+              </a>
+            </th>
+            <th>
+              <a href="#" class="rs-table-sort rs-table-sort-desc hover">
+                <span class="rs-table-sort-text">Header (Descending Hover)</span>
+                <span class="rs-table-sort-indicator"></span>
+              </a>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="rs-table-status rs-table-status-ok"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td><a href="#">Body</a></td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+            <td>Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-warning"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td><a href="#">Body</a></td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td>Body</td>
+            <td>Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-error"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td><a href="#">Body</a></td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+            <td>Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-ok"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td><a href="#">Body</a></td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td>Body</td>
+            <td>Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-warning"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td><a href="#">Body</a></td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+            <td>Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-error"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td><a href="#">Body</a></td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td>Body</td>
+            <td>Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-ok"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td><a href="#">Body</a></td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+            <td>Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-warning"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td><a href="#">Body</a></td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td>Body</td>
+            <td>Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-error"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td><a href="#">Body</a></td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+            <td>Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </body>
 </html>
