add text based rows to screenshot page

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -167,56 +167,74 @@
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-ok"></td>
-            <td class="rs-table-checkbox"><input type="checkbox"></td>
-            <td class="rs-table-cog"><button class="rs-cog"></button></td>
-            <td class="rs-table-radio"><input type="radio" name="selection"></td>
-            <td><a href="#">Body</a></td>
-            <td class="rs-table-select">
-              <select>
-                <option>One</option>
-                <option>Two</option>
-                <option>Three</option>
-              </select>
-            </td>
-            <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-            <td>Body</td>
-            <td class="rs-table-input"><input type="text"></td>
-            <td>Body</td>
-          </tr>
-          <tr>
-            <td class="rs-table-status rs-table-status-warning"></td>
-            <td class="rs-table-checkbox"><input type="checkbox"></td>
-            <td class="rs-table-cog"><button class="rs-cog"></button></td>
-            <td class="rs-table-radio"><input type="radio" name="selection"></td>
-            <td><a href="#">Body</a></td>
-            <td class="rs-table-select">
-              <select>
-                <option>One</option>
-                <option>Two</option>
-                <option>Three</option>
-              </select>
-            </td>
+            <td class="rs-table-checkbox"></td>
+            <td class="rs-table-cog"></td>
+            <td class="rs-table-radio"></td>
             <td>Body</td>
             <td>Body</td>
-            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
             <td>Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-error"></td>
-            <td class="rs-table-checkbox"><input type="checkbox"></td>
-            <td class="rs-table-cog"><button class="rs-cog"></button></td>
-            <td class="rs-table-radio"><input type="radio" name="selection"></td>
-            <td><a href="#">Body</a></td>
-            <td class="rs-table-select">
-              <select>
-                <option>One</option>
-                <option>Two</option>
-                <option>Three</option>
-              </select>
-            </td>
-            <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+            <td class="rs-table-checkbox"></td>
+            <td class="rs-table-cog"></td>
+            <td class="rs-table-radio"></td>
             <td>Body</td>
-            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-warning"></td>
+            <td class="rs-table-checkbox"></td>
+            <td class="rs-table-cog"></td>
+            <td class="rs-table-radio"></td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-ok"></td>
+            <td class="rs-table-checkbox"></td>
+            <td class="rs-table-cog"></td>
+            <td class="rs-table-radio"></td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-error"></td>
+            <td class="rs-table-checkbox"></td>
+            <td class="rs-table-cog"></td>
+            <td class="rs-table-radio"></td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-warning"></td>
+            <td class="rs-table-checkbox"></td>
+            <td class="rs-table-cog"></td>
+            <td class="rs-table-radio"></td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
+            <td>Body</td>
             <td>Body</td>
           </tr>
         </tbody>
